==> laobanwang676-droid/Weather_Clock/HAL_stm32F4_RTOS_clock/APP/st7789/st7789.c <==
#include <stdbool.h>
#include <stdio.h>
#include <string.h>
#include <stddef.h>
#include "stm32f4xx.h"
#include "st7789.h"
#include "font.h"
#include "FreeRTOS.h"
#include "task.h"
#include "semphr.h"
#define delay_us(x)  cpu_delay(x)
#define delay_ms(x)  cpu_delay((x)*1000)
#define CS_PORT      GPIOB
#define CS_PIN       GPIO_PIN_12
#define DC_PORT      GPIOC
#define DC_PIN       GPIO_PIN_6
#define BL_PORT      GPIOC
#define BL_PIN       GPIO_PIN_7
#define RESET_PORT   GPIOB
#define RESET_PIN    GPIO_PIN_14

void st7789_init(void)
{
    write_gram_semaphore = xSemaphoreCreateBinary();
    configASSERT(write_gram_semaphore);
    __HAL_DMA_ENABLE_IT(&hdma_spi2_tx, DMA_IT_TC);//开启DMA传输完成中断
    st7789_init_display();
}

static void st7789_write_register(uint8_t reg,uint8_t data[],uint8_t length)
{
    SPI2_SetDataWidth(8);//命令寄存器为8位宽度
    HAL_GPIO_WritePin(CS_PORT, CS_PIN, GPIO_PIN_RESET); //选中从机
    HAL_GPIO_WritePin(DC_PORT, DC_PIN, GPIO_PIN_RESET); //指令模式
    
    HAL_SPI_Transmit(&hspi2, &reg, 1, HAL_MAX_DELAY); //发送寄存器地址

    if(length > 0)
    {
        HAL_GPIO_WritePin(DC_PORT, DC_PIN, GPIO_PIN_SET); //数据模式
        HAL_SPI_Transmit(&hspi2, data, length, HAL_MAX_DELAY); //发送数据
    }
    while(HAL_SPI_GetState(&hspi2) != HAL_SPI_STATE_READY); //确保 SPI 传输完成
    HAL_GPIO_WritePin(CS_PORT, CS_PIN, GPIO_PIN_SET); //取消选中
}

static void st7789_dma_write_gram(uint8_t data[],uint32_t length, bool single_color)
{   
    SPI2_SetDataWidth(16);//GRAM寄存器为16位宽度
    uint8_t flag = 0;
    HAL_GPIO_WritePin(CS_PORT, CS_PIN, GPIO_PIN_RESET); //选中从机
    HAL_GPIO_WritePin(DC_PORT, DC_PIN, GPIO_PIN_SET); //数据模式
    length /= 2;//转换为16位数据长度
    do{
        uint32_t size = length < 65535 ? length : 65535;
        if(flag == 0)
        {
            flag = 1;
            __HAL_DMA_DISABLE(&hdma_spi2_tx);//先关闭DMA
            if(single_color)        hdma_spi2_tx.Instance->CR &= ~DMA_SxCR_MINC; //单色填充时关闭 DMA 内存地址自增
            else                    hdma_spi2_tx.Instance->CR |= DMA_SxCR_MINC;  //多色填充时开启 DMA 内存地址自增
        }
        HAL_SPI_Transmit_DMA(&hspi2, data, size); //启动 DMA 传输
        xSemaphoreTake(write_gram_semaphore, portMAX_DELAY);//等待
        if(!single_color)
            data += size * 2;//移动数据指针 注意每个像素占2字节
        length -= size;
    }while (length > 0);
    
    while(HAL_SPI_GetState(&hspi2) != HAL_SPI_STATE_READY); //确保 SPI 传输完成
    HAL_GPIO_WritePin(CS_PORT, CS_PIN, GPIO_PIN_SET); //取消选中
}

static void st7789_reset(void)
{//拉低RESET引脚复位
    HAL_GPIO_WritePin(RESET_PORT,RESET_PIN,GPIO_PIN_RESET);
    vTaskDelay(pdMS_TO_TICKS(1));
    HAL_GPIO_WritePin(RESET_PORT,RESET_PIN,GPIO_PIN_SET);
    vTaskDelay(pdMS_TO_TICKS(120));
}

static void st7789_set_backlight(bool on)
{//打开背光
    HAL_GPIO_WritePin(BL_PORT, BL_PIN, on ? GPIO_PIN_SET : GPIO_PIN_RESET);
}
