==> laobanwang676-droid/Weather_Clock/SPL_Lvgl_RTOS_Clock/driver/st7789/st7789.c <==
#include <stdbool.h>
#include <stdint.h>
#include <stdio.h>
#include <string.h>
#include <stddef.h>
#include "stm32f4xx.h"
#include "st7789.h"
#include "FreeRTOS.h"
#include "task.h"
#include "semphr.h"
#define delay_us(x)  cpu_delay(x)
#define delay_ms(x)  cpu_delay((x)*1000)
#define CS_PORT      GPIOB
#define CS_PIN       GPIO_Pin_12
#define DC_PORT      GPIOC
#define DC_PIN       GPIO_Pin_6
#define BL_PORT      GPIOC
#define BL_PIN       GPIO_Pin_7
#define RESET_PORT   GPIOB
#define RESET_PIN    GPIO_Pin_14

void st7789_init(void)
{
    write_gram_semaphore = xSemaphoreCreateBinary();
    configASSERT(write_gram_semaphore);
    st7789_spi_init();
    st7789_dma_init();
    st7789_interrupt_init();
    st7789_io_init();
    st7789_init_display();
}

static void st7789_write_register(uint8_t reg,uint8_t data[],uint8_t length)
{
    SPI_DataSizeConfig(SPI2, SPI_DataSize_8b);//配置为8位数据传输

    GPIO_WriteBit(CS_PORT ,CS_PIN,Bit_RESET);
    GPIO_WriteBit(DC_PORT,DC_PIN,Bit_RESET);
    
    SPI_SendData(SPI2,reg);                    //发送寄存器指令
    while (SPI_GetFlagStatus(SPI2, SPI_FLAG_TXE) == RESET);
    while (SPI_GetFlagStatus(SPI2, SPI_FLAG_BSY) != RESET);
    GPIO_WriteBit(DC_PORT,DC_PIN,Bit_SET);     //发送数据指令
    while(!SPI_GetFlagStatus(SPI2,SPI_FLAG_TXE));
    for(uint16_t i=0;i<length ;i++)
    {
        SPI_SendData(SPI2,data[i]);
        while(!SPI_GetFlagStatus(SPI2,SPI_FLAG_TXE));
    }
    while (SPI_GetFlagStatus(SPI2, SPI_FLAG_BSY) != RESET);
    GPIO_SetBits(CS_PORT ,CS_PIN);
}

static void st7789_dma_write_gram(uint8_t data[],uint32_t length, bool single_color)
{   
    SPI_DataSizeConfig(SPI2, SPI_DataSize_16b);//配置为16位数据传输
    GPIO_ResetBits(CS_PORT, CS_PIN);//选中从机
    GPIO_SetBits(DC_PORT, DC_PIN);//传输显示数据
    length /= 2; 

    do{
        uint32_t size = length < 65535 ? length : 65535;
        if(single_color)        DMA1_Stream4->CR &= ~DMA_SxCR_MINC;//关闭 DMA 内存地址自增
        else                    DMA1_Stream4->CR |= DMA_SxCR_MINC; //开启 DMA 内存地址自增
        DMA1_Stream4->M0AR = (uint32_t)data;//指定 DMA 要读取数据的内存起始地址
        DMA1_Stream4->NDTR = size;//指定 DMA 的总传输次数
        DMA_Cmd(DMA1_Stream4, ENABLE);
        xSemaphoreTake(write_gram_semaphore, portMAX_DELAY);//等待
        if(!single_color)
            data += size * 2;
        length -= size;
    }while (length > 0);
    
    while(SPI_GetFlagStatus(SPI2, SPI_FLAG_BSY) == SET);
    GPIO_SetBits(CS_PORT, CS_PIN);
}

static void st7789_reset(void)
{//拉低RESET引脚复位
    GPIO_WriteBit(RESET_PORT,RESET_PIN,Bit_RESET);
    vTaskDelay(pdMS_TO_TICKS(1));
    GPIO_WriteBit(RESET_PORT,RESET_PIN,Bit_SET);
    vTaskDelay(pdMS_TO_TICKS(120));
}

static void st7789_set_backlight(bool on)
{//打开背光
    GPIO_WriteBit(BL_PORT, BL_PIN, on ? Bit_SET : Bit_RESET);
}
